--- a/css/custom.css
+++ b/css/custom.css
@@ -168,14 +168,13 @@ custom stuff
 
 .site-wrapper {
 background: #4393b8; /* Old browsers */
-background: -moz-radial-gradient(center, ellipse cover,  #4393b8 0%, #346aa9 57%, #346aa9 100%); /* FF3.6+ */
-background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#4393b8), color-stop(57%,#346aa9), color-stop(100%,#346aa9)); /* Chrome,Safari4+ */
-background: -webkit-radial-gradient(center, ellipse cover,  #4393b8 0%,#346aa9 57%,#346aa9 100%); /* Chrome10+,Safari5.1+ */
-background: -o-radial-gradient(center, ellipse cover,  #4393b8 0%,#346aa9 57%,#346aa9 100%); /* Opera 12+ */
-background: -ms-radial-gradient(center, ellipse cover,  #4393b8 0%,#346aa9 57%,#346aa9 100%); /* IE10+ */
-background: radial-gradient(ellipse at center,  #4393b8 0%,#346aa9 57%,#346aa9 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4393b8', endColorstr='#346aa9',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-
+background: -moz-linear-gradient(top,  #4393b8 0%, #346aa9 61%, #346aa9 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4393b8), color-stop(61%,#346aa9), color-stop(100%,#346aa9)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #4393b8 0%,#346aa9 61%,#346aa9 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #4393b8 0%,#346aa9 61%,#346aa9 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #4393b8 0%,#346aa9 61%,#346aa9 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #4393b8 0%,#346aa9 61%,#346aa9 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4393b8', endColorstr='#346aa9',GradientType=0 ); /* IE6-9 */
 	position: absolute;
 }
 
