--- a/css/custom.css
+++ b/css/custom.css
@@ -165,9 +165,8 @@ body {
 custom stuff
  */
 
-
-.site-wrapper {
-	background: #4393b8; /* Old browsers */
+.blue {
+background: #4393b8; /* Old browsers */
 	background: -moz-linear-gradient(top,  #4393b8 0%, #346aa9 61%, #346aa9 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4393b8), color-stop(61%,#346aa9), color-stop(100%,#346aa9)); /* Chrome,Safari4+ */
 	background: -webkit-linear-gradient(top,  #4393b8 0%,#346aa9 61%,#346aa9 100%); /* Chrome10+,Safari5.1+ */
@@ -175,6 +174,12 @@ custom stuff
 	background: -ms-linear-gradient(top,  #4393b8 0%,#346aa9 61%,#346aa9 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  #4393b8 0%,#346aa9 61%,#346aa9 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4393b8', endColorstr='#346aa9',GradientType=0 ); /* IE6-9 */
+	display: table;
+	width: 100%;
+	height: 100%;
+	min-height: 100%
+	}
+.site-wrapper {
 	position: absolute;
 }
 
